# cnn-genai

./: .gitignore  README.md  main.py  pyproject.toml  test_llm.py
app/: api.py  api_llm.py
finetuned_gpt2/: tokenizer.json
helper_lib/: __init__.py  assignment2.py  assignment3_gan.py  data_loader.py  diffusion_model.py  energy_model.py  enhanced_cnn.py  evaluator.py  fcnn.py  gan.py  generator.py  model.py  simple_cnn.py  trainer.py
helper_lib/assignment5_llm/: llm_base.py  llm_finetune_gpt2.py
logs/: Diffusion_train_log.csv  Energy_train_log.csv
