[project]
name = "cnn-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.18.0",
    "tqdm",
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.23.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.0.0", 
    "spacy>=3.7.2", 
    "gdown",                # for CelebA dataset download
]

[tool.fastapi]
app = "app.api:app"